# ACT-AI

act/: README.md  app.py  pyproject.toml  requirements.txt
act/langchain-env/: pyvenv.cfg
act/src/act/: crew.py  main.py
act/src/act/.ipynb_checkpoints/: crew-checkpoint.py  main-checkpoint.py
act/src/act/config/: agents.yaml  tasks.yaml
act/src/act/tools/: sec_tools.py
act/templates/: allTasks.html  mail.html  signUpMail.html  taskResult.html
fmyenv/: pyvenv.cfg
