[tool.poetry]
name = "act"
version = "0.1.0"
description = "ACT using crewAI"
authors = ["Lucia Cepria"]


[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}

[tool.poetry.scripts]
act = "act.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
